# classagent

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
app/teach/: page.tsx
backend/: .env.example  pyproject.toml
backend/app/: broadcaster.py  logging_config.py  main.py  orchestrator.py  session.py  transcriber.py
components/study/: AgentStrip.tsx  Cards.tsx  CodeBlock.tsx  DiagramBlock.tsx  MathBlock.tsx  Transcript.tsx  types.ts
deploy/vm/: Caddyfile.example  install.sh
lib/: api.ts  download.ts
